fix: fixing URL for sign in button and dark mode style

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,15 +45,15 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
-  color: var(--foreground);
+  color: var(--foreground); */
   font-family: Arial, Helvetica, sans-serif;
 }
